# Kameleon

./: .gitignore  README.md  START_SYSTEM.sh  SYSTEM_README.md
DOMENA_08_VARNOSTNI_SISTEMI/: domain.ts  environments.ts  standards.ts
DOMENA_08_VARNOSTNI_SISTEMI/categories/: KATEGORIJA_08_CRYPTO.ts
DOMENA_08_VARNOSTNI_SISTEMI/extensions/: advanced-capabilities.ts
DOMENA_08_VARNOSTNI_SISTEMI/functions/: PODMODUL_08_AES_CORE_functions.ts  PODMODUL_08_AUTH_JWT_functions.ts  PODMODUL_08_CICD_BUILD_functions.ts  PODMODUL_08_CICD_DEPLOY_functions.ts  PODMODUL_08_HASHING_CORE_functions.ts  PODMODUL_08_LOGGING_RETENTION_functions.ts  (+8 more)
extracted_content/COMPLETE_CENTER/gisc-backend/: .gitignore  pyproject.toml
extracted_content/COMPLETE_CENTER/gisc-backend/app/: advanced_operations.py  advanced_tier5_router.py  blueteam_operations.py  camera_face_recognition.py  compliance_engine.py  cryptography_engine.py  database.py  detection_engine.py  enterprise_api.py  global_attack_visualization.py  ha_infrastructure.py  intelligence_engine.py  local_threat_intel.py  main.py  malware_capture.py  models.py  multi_tenant.py  osint_engine.py  person_intelligence.py  person_profile_storage.py  real_pdf_generator.py  real_scanner_engine.py  realtime_streaming.py  realtime_threat_feeds.py  security_tools.py  siem_engine.py  soar_engine.py  surveillance_engine.py  system_data.py  threat_hunting.py  tier5_router.py  warfare_engine.py  yara_engine.py
gisc-backend/: app.db
gisc-ui/: eslint.config.js  index.html
templates/: README.md.predloga  registry.ts  tsconfig.json.predloga
(+267 files in other folders)
